fix preview icon and text alignment

--- a/css/style.css
+++ b/css/style.css
@@ -5,3 +5,4 @@
 input[type='text'],input[type='number'],input[type='password'],textarea {font-size: 16px;}
 
 .region-navigation #block-userlogin h2{clear: both;}
+.region-navigation li a{float: left;}
